Fixed the navigation bar, created a new nav and logo container so I could properly align

--- a/css/index.css
+++ b/css/index.css
@@ -249,7 +249,9 @@ footer{
     width:100%;
     height:100px;
     /* border:2px solid red; */
+    margin-top:20px;
     display: flex;
+
     justify-content:center;
 }
 
@@ -259,9 +261,11 @@ footer{
     /* border:2px solid blue; */
     color:grey;
     text-decoration: none;
+
 }
 
 nav a.services{
+
     margin-left:-100px;
 }
 .nav .logo{
@@ -412,13 +416,15 @@ li{
 
 nav a.services{
     margin-top:100px;
-    margin-left:0px;
+    margin-left:250px;
 }
-
-.nav .logo{
-    position:relative;
-    margin-left:50px;
-    top:-330px;
+.main_nav_logo_container{
+    /* border:2px solid red; */
+    width:500px;
+}
+.logo{
+    margin-left:-240px;
+    /* top:-330px; */
     /* border:2px solid purple; */
 }
 .nav a{
@@ -428,7 +434,14 @@ nav a.services{
     display: block; /* Make the links appear below each other */
     padding: 12px; /* Add some padding */
     text-decoration: none; /* Remove underline from links */
+    margin-left:250px;
+    text-align: center;
 
+}
+
+.nav a:hover{
+    background-image: linear-gradient(blue, lightblue);
+	color:white;
 }
 .header_container{
 width:100%;
@@ -495,4 +508,6 @@ padding-bottom:20px;
 .contact{
 margin-left:180px;
 }
+
+
 }
